Fix "Enable foreign key checks" on metro theme spacing to the checkbox

--- a/themes/original/scss/_common.scss
+++ b/themes/original/scss/_common.scss
@@ -48,6 +48,10 @@ form {
   display: inline;
 }
 
+input[type=checkbox]#fk_checks {
+  margin: 6px;
+}
+
 textarea {
   overflow: visible;
 }
